manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: node-app
  name: node-app
  labels:
    app: node-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-app
          image: iamparth/node-hostname-app
          ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: node-app
  name: node-hostname-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    name: http
  - port: 443
    targetPort: 3000
    name: https
  selector:
    app: node-app
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800  # 3 hours
