manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: node-app
  name: node-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-hostname-service
            port:
              name: http
